00_namespace.yaml
# Create Namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-test
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
